<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="134dp"
        android:layout_height="163dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/ef"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginLeft="6dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="234dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/ic_mail_black_24dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColorHint="#8b0000"
        android:textStyle="italic"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="370dp"
         android:layout_marginLeft="6dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="238dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:textColorHint="#8b0000"
        android:textStyle="italic"
        android:textColor="#000"/>

    <Button
        android:id="@+id/login"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
  android:background="@drawable/button"
        android:layout_marginLeft="6dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="175dp"
        android:text="@string/login"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-175dp"
        android:text="@string/don_t_have_an_account_need_new_account" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="122dp"
        android:text="@string/or_login_with" />

    <LinearLayout
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginTop="470dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:paddingStart="20dp"
            android:id="@+id/facebook_signin_button"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:src="@drawable/google"
                android:id="@+id/google_signin_button"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/twitter"
            android:id="@+id/twitter_signin_button"
            android:paddingStart="20dp"/>


    </LinearLayout>




</RelativeLayout>